fix: spacing between "choose folder" and the path below

--- a/src/installer.css
+++ b/src/installer.css
@@ -117,7 +117,7 @@ h1 {
 }
 
 p {
-  margin-bottom: 34px;
+  margin-bottom: 18px;
 }
 
 ::selection {
